# Chess-engine-Haskell

./: CHANGELOG.md  README.md  ufabc-xadrez.cabal
src/: IAXadrez.hs  Main.hs  Testes_simples.hs  XadrezElementos.hs  XadrezPartida.hs
src/model/: XadrezElementos.hs
